crates/masonry/src/widget/snapshots/masonry__widget__checkbox__tests__simple_checkbox-2.snap
---
source: crates/masonry/src/widget/checkbox.rs
assertion_line: 252
expression: harness.root_widget()
---
SizedBox(
    Checkbox<[X] Hello>(
        Label<Hello>,
    ),
)
