crates/masonry/src/widget/snapshots/masonry__widget__checkbox__tests__simple_checkbox.snap
---
source: crates/masonry/src/widget/checkbox.rs
assertion_line: 241
expression: harness.root_widget()
---
SizedBox(
    Checkbox<[ ] Hello>(
        Label<Hello>,
    ),
)
